testsuite/tests/lexical_envs/invalid_add_to_env/test.out
== kv_dest_env/test.lkt ==
test.lkt:5:61: error: Expected type DesignatedEnv, got Int
5 |         add_to_env_kv(key=node.symbol, value=node, dest_env=1)
  |                                                             ^


== kv_key/test.lkt ==
test.lkt:5:27: error: Expected type Symbol, got Int
5 |         add_to_env_kv(key=1, value=self)
  |                           ^


== kv_metadata/test.lkt ==
test.lkt:5:61: error: Expected type Metadata, got Int
5 |         add_to_env_kv(key=node.symbol, value=node, metadata=1)
  |                                                             ^


== kv_value/test.lkt ==
test.lkt:5:46: error: Expected type FooNode, got Int
5 |         add_to_env_kv(key=node.symbol, value=1)
  |                                              ^


== mapping_all/test.lkt ==
test.lkt:19:13: error: Expected type Array[EnvAssoc], got EnvAssoc
19 |             EnvAssoc(
   |             ^


== mapping_single/test.lkt ==
test.lkt:21:13: error: Expected type EnvAssoc, got Array[EnvAssoc]
21 |             node.names.map(
   |             ^


lkt_compile: Done
